# forms-validator

./: Makefile  README.md  database.py  db.json  main.py  migrate.py  parser.py  pyproject.toml  test.py  test_requests.py  validators.py
src/: database.py  parser.py  validators.py
