[tool.poetry]
name = "forms-validator"
version = "0.1.0"
description = ""
authors = ["al-ov73 <klever1987@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
tinydb = "^4.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
